# LTSHaskell-slack-bot

./: .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  ltshaskell-slack-bot.cabal
app/: Main.hs
src/: Lib.hs
src/Bot/: Config.hs  Message.hs  Options.hs  Run.hs  Slack.hs  Types.hs
